# goseli

./: .env.example  .gitignore  CHECKPOINT.md  CLAUDE.md  PLAN.md  docker-compose.yml  package.json
.claude/skills/a11y-audit/: SKILL.md
.claude/skills/api-doc/: SKILL.md
.claude/skills/assign-task/: SKILL.md
.claude/skills/brand-guide/: SKILL.md
.claude/skills/bug-report/: SKILL.md
.claude/skills/checkpoint/: SKILL.md
.claude/skills/competitive-analysis/: SKILL.md
.claude/skills/copy-review/: SKILL.md
.claude/skills/db-migrate/: SKILL.md
.claude/skills/deploy-check/: SKILL.md
.claude/skills/design-spec/: SKILL.md
.claude/skills/email-template/: SKILL.md
.claude/skills/exploratory-test/: SKILL.md
.claude/skills/feature-prioritize/: SKILL.md
.claude/skills/health-check/: SKILL.md
.claude/skills/i18n-check/: SKILL.md
.claude/skills/kpi-dashboard/: SKILL.md
.claude/skills/landing-page/: SKILL.md
.claude/skills/new-component/: SKILL.md
.claude/skills/new-endpoint/: SKILL.md
.claude/skills/onboarding-flow/: SKILL.md
.claude/skills/product-copy/: SKILL.md
.claude/skills/promotion-spec/: SKILL.md
.claude/skills/retrospective/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.claude/skills/seo-audit/: SKILL.md
.claude/skills/sprint-review/: SKILL.md
.claude/skills/standup/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/test-plan/: SKILL.md
.claude/skills/test-report/: SKILL.md
.claude/skills/user-story/: SKILL.md
.claude/skills/ux-flow/: SKILL.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/.sqlx/: query-1e4a860e7637ab34875cb91cd431909ab498fa73de31dad5cb843f57f66f3d97.json  query-20929d385b25eb0a9115cb686502a42731fff96356daccdb7850e7fec476f932.json  query-2c784bf4932c644715d6cba8a0882cfd976d514e1c8ddf199b8f93686d011ba0.json  query-647897bca0a72581c043ea3c51bce51ab74f6684513aa6715aad33e7892137e3.json  query-6742190751dd85a49ae9c5c52c962d25038b9bf92c60a9b225a8270b79a02a28.json  query-94ffcc929c77c7ea834f50718beeafc108e8b84a23c1cc9247609f93ccf68b70.json  query-a88e3eb2073e6f4132d80abe0364cf8390dc1814d236c755f5a81358ad04ea3e.json
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  main.rs
backend/crates/api/src/handlers/: auth.rs  cart.rs  categories.rs  mod.rs  products.rs
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: jwt.rs  lib.rs  middleware.rs  password.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: error.rs  lib.rs
backend/crates/core/src/dto/: auth.rs  cart.rs  category.rs  common.rs  mod.rs  pagination.rs  product.rs
backend/crates/core/src/models/: cart.rs  category.rs  mod.rs  product.rs  store.rs  user.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: cart.rs  categories.rs  lib.rs  products.rs  tokens.rs  users.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: lib.rs
backend/migrations/: 20260217000001_create_extensions_and_functions.sql  20260217000002_create_stores.sql  20260217000003_create_users.sql  20260217000004_create_refresh_tokens.sql  20260217000005_create_categories.sql  20260217000006_create_products.sql  20260217000007_create_product_images.sql  20260217000008_create_product_variants.sql  20260219000001_create_carts.sql  20260219000002_create_cart_items.sql
frontend/: .gitignore  next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx
frontend/src/app/(admin)/: layout.tsx
frontend/src/app/(storefront)/: layout.tsx  page.tsx
frontend/src/app/(storefront)/cart/: page.tsx
frontend/src/app/(storefront)/products/: ProductGrid.tsx  page.tsx
frontend/src/app/(storefront)/products/[id]/: AddToCartButton.tsx  not-found.tsx  page.tsx
frontend/src/components/: CartItemRow.tsx  CartSummary.tsx  CategoryFilter.tsx  Footer.tsx  Header.tsx  Pagination.tsx  PriceDisplay.tsx  ProductCard.tsx  QuantitySelector.tsx  SearchBar.tsx  SortSelect.tsx
frontend/src/lib/: api.ts  hooks.ts  types.ts
frontend/src/styles/: README.md  globals.css
shared/: openapi.yaml
