[package]
name = "goseli-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
goseli-core = { path = "../core" }
goseli-db = { path = "../db" }

# From workspace
uuid = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
