[package]
name = "goseli-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# From workspace
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
