[package]
name = "goseli-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
goseli-core = { path = "../core" }

# From workspace
sqlx = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
